Upgraded build JDK to 17 and test framework to JUnit 5